<resources>
    <string name="app_name">QrUrbanoMaterial</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="app_bar_name">Urbano Qr </string>

    <string name="login">Login</string>
    <string name="error_empty_username">Error de Usuario</string>
    <string name="error_empty_password">Error de Contraseña</string>



    <string name="menu_string_buscar">buscar</string>
    <string name="menu_string_subMenu">subMenu</string>
    <string name="menu_string_logout">LogOut</string>

    <string name="button_scan">Scan Qr</string>
    <string name="Tag_Login">Urbano Login</string>

    <string name="contentDescriptionQrimage">Qr de prueba</string>
    <string name="contentDescriptionLogoimage">Logo image</string>

    <string name="solicitanteTag">Datos del Solicitante</string>
    <string name="vig1">Vigencia 1</string>
    <string name="vig2">Vigencia 2</string>
    <string name="solicitanteName">Nombre del Solicitante</string>
    <string name="solicitanteDomicilio">Domicilio del Solicitante</string>
    <string name="solicitanteTel">Telefono</string>
    <string name="solicitanteObraPredial">Obra predial</string>

    <string name="propietarioTag">Datos del Propietario</string>
    <string name="propietarioName">Nombre del Propietario</string>
    <string name="propietarioDomicilio">Domicilio del Propietario</string>
    <string name="propietarioNumeroRegistro">Número de Registro</string>


    <string name="obraTag">Datos del Obra</string>
    <string name="cuentaPredialObra">Cuenta predial</string>
    <string name="ubicacionObra">Ubicacion de la obra</string>
    <string name="destinoObra">Destino de la construcción</string>
    <string name="superficieObra">Superficie de la costrucción</string>
</resources>

