<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_propietario">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/solicitanteTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/propietarioTag"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textColor="@color/bg_whi_gra"
            android:layout_marginBottom="25dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPropietarioName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/propietarioName"
            android:textColorHint="@color/municipioColor"
            app:endIconTint="@color/bg_whi_gra"
            android:layout_marginBottom="15dp"
            android:layout_margin="5dp"
            app:hintTextColor="@color/bg_blk_gra"
            app:endIconDrawable="@drawable/ic_person_black_24dp"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPropietarioName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_whi_gra"
                android:paddingLeft="10dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPropietarioDomicilio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/propietarioDomicilio"
            android:textColorHint="@color/municipioColor"
            app:endIconTint="@color/municipioColor"
            android:layout_marginBottom="15dp"
            android:layout_margin="5dp"
            app:hintTextColor="@color/bg_blk_gra"
            app:endIconDrawable="@drawable/ic_home_black_24dp"
            app:endIconMode="custom">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPropietarioDomicilio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:background="@color/bg_whi_gra"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPropietarioNumeroRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/propietarioNumeroRegistro"
            android:layout_margin="5dp"
            app:hintTextColor="@color/bg_blk_gra"
            android:textColorHint="@color/municipioColor"
            app:endIconTint="@color/municipioColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPropietarioNumeroRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_whi_gra"
                android:paddingLeft="10dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>